Fix inline baseline alignment

--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -98,7 +98,7 @@ body {
 }
 
 .vertical-baseline {
-  vertical-align: baseline;
+  vertical-align: baseline !important;
 }
 
 .pb-safe {
